--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<html lang="en">
+<!DOCTYPE html>
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Serverless</title>
+    ...
   </head>
   <body>
-    <h1>serverless cronjob is running</h1>
+    <video id="video" width="640" height="480" autoplay></video>
+    <!-- Dont for get to link your JavaScript -->
+    <script src="./netlify/functions/main.js" async></script>
   </body>
 </html>
