--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <video id="video" width="640" height="480" autoplay></video>
+    <input type="text" id="data" />
     <!-- Dont for get to link your JavaScript -->
     <script src="./netlify/functions/main.js" async></script>
   </body>
