--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     ...
   </head>
   <body>
+    <textarea name="data" id="" cols="30" rows="10" id="data"></textarea>
     <video id="video" width="640" height="480" autoplay></video>
-    <input type="text" id="data" />
     <!-- Dont for get to link your JavaScript -->
     <script src="./netlify/functions/main.js" async></script>
   </body>
