--- a/index.html
+++ b/index.html
@@ -1,12 +1,62 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    ...
-  </head>
-  <body>
-    <textarea name="data" id="" cols="30" rows="10" id="data"></textarea>
-    <video id="video" width="640" height="480" autoplay></video>
-    <!-- Dont for get to link your JavaScript -->
-    <script src="./netlify/functions/main.js" async></script>
-  </body>
-</html>
+<template>
+  <div>
+    <p class="error">{{ error }}</p>
+
+    <p class="decode-result">Last result: <b>{{ result }}</b></p>
+
+    <qrcode-stream @decode="onDecode" @init="onInit" />
+  </div>
+</template>
+
+<script>
+  import { QrcodeStream } from "../../../../src";
+
+  export default {
+    components: { QrcodeStream },
+
+    data() {
+      return {
+        result: "",
+        error: "",
+      };
+    },
+
+    methods: {
+      onDecode(result) {
+        this.result = result;
+      },
+
+      async onInit(promise) {
+        try {
+          await promise;
+        } catch (error) {
+          if (error.name === "NotAllowedError") {
+            this.error = "ERROR: you need to grant camera access permission";
+          } else if (error.name === "NotFoundError") {
+            this.error = "ERROR: no camera on this device";
+          } else if (error.name === "NotSupportedError") {
+            this.error = "ERROR: secure context required (HTTPS, localhost)";
+          } else if (error.name === "NotReadableError") {
+            this.error = "ERROR: is the camera already in use?";
+          } else if (error.name === "OverconstrainedError") {
+            this.error = "ERROR: installed cameras are not suitable";
+          } else if (error.name === "StreamApiNotSupportedError") {
+            this.error = "ERROR: Stream API is not supported in this browser";
+          } else if (error.name === "InsecureContextError") {
+            this.error =
+              "ERROR: Camera access is only permitted in secure context. Use HTTPS or localhost rather than HTTP.";
+          } else {
+            this.error = `ERROR: Camera error (${error.name})`;
+          }
+        }
+      },
+    },
+  };
+</script>
+
+<style scoped>
+  .error {
+    font-weight: bold;
+    color: red;
+  }
+</style>
